# $Id$

2009-09-18 Geneviève Bastien <gbastien@versatic.net>
  * Fixed #502 (Note: this fix works only if all gateways have config value SSLAvailable Yes, or else the server determines that even though the connection originated from HTTP by those gateways, it should use SSL and in this case, the port is not right.  Should need a way to specify port in Wifidog Virtual Hosts or get the apache port)
  * Some realignment of tabs while documenting

2009-08-20 Genevieve Bastien <gbastien@versatic.net>
  * Updated dependencies  #599
  * Now gets the temp dir of the OS instead of hardcoding the /tmp dir in the install script #588

2009-07-26 Robin Jones
	* Addded New Geocoders Yahoo and Google.
	* Geocoder now defaults to google if no country specific Geocoder is found (in future, this will be made selectable by network)
	* Fixed Postcode search on Find Hotspot Map #436
	* Added search for user by email closes #417
	* Added validation to networkID to stop database errors, closes #458
	

2009-07-10 Benoit Grégoire <benoitg@coeus.ca>
	* Fix bug editing user profiles introduced in [1339].

2009-07-03 Benoit Grégoire <benoitg@coeus.ca>
	* Refactor signup.php.  The code flow is still annoyingly unclear and complex, but the file is shorter and hopefully easier to debug (and hopefully fixes #593)

2009-06-26 Benoit Grégoire <benoitg@coeus.ca>
	* Updated greek translation by bill@e-texnologia.gr and strzol@gmail.com, still needs some work.
	
2009-06-25 Benoit Grégoire <benoitg@coeus.ca>
	* Fix #559
	* Fix #574
	* Fix bug introduced in 2009-06-23 patch for signing up new users.
	
2009-06-23 Benoit Grégoire <benoitg@coeus.ca>
	* Commit another slightly modified patch contributed by Zap Sherbrooke:  Allow generating publicly accessible statistics for the various nodes.  Enabled node per node.  Note that a cron must be setup for those stats to actually be generated.

2009-06-09 Benoit Grégoire <benoitg@coeus.ca>